Adicionando o endpoint de delete